# no-more-mr-dice-guy

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker-push.yml  rust.yml
src/: commands.rs  main.rs  rolls.rs  store.rs
src/commands/: checks.rs  dice.rs  roles.rs
src/rolls/: options.rs  test.rs
