[package]
name = "no_more_mr_dice_guy"
version = "0.1.0"
authors = ["Luna <git@nyx.nova.fail>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
rand = "0.7"
meval = "0.2"
lazy_static = "1.4"
anyhow = "1"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.regex]
version = "1.3"
features = ["pattern"]

[dependencies.serenity]
default-features = false
#features = ["framework", "standard_framework", "rustls_backend"]
features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "framework",
    "standard_framework",
]
version = "0.9.0-rc.2"
