[package]
name = "no_more_mr_dice_guy"
version = "0.4.0"
authors = ["Luna <git@nyx.nova.fail>"]
edition = "2018"

[dependencies]
tokio = { version = "1.3.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.3"
rand_chacha = "0.3"
meval = "0.2"
lazy_static = "1.4"
anyhow = "1"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
regex = "1.4"
num-traits = "0.2.14"
itertools = "0.10.0"

[dependencies.serenity]
default-features = false
#features = ["framework", "standard_framework", "rustls_backend"]
features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "framework",
    "standard_framework",
]
version = "0.10.2"
